# ai-cti-extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml
.claude/: .ckignore  settings.json
.claude/agents/: git-manager.md  journal-writer.md  mcp-manager.md  tester.md
.claude/hooks/: cost-guard.cjs
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py  deps.py  exception_handlers.py  problem.py  schemas.py
app/api/middleware/: __init__.py  correlation_id.py
app/api/routers/: documents.py  extractions.py  health.py  ingest.py  stix.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  redaction.py
app/db/: __init__.py  audit_chain.py  session.py  upsert.py
app/db/models/: __init__.py  audit_log.py  base.py  chunk.py  document.py  evidence_span.py  export.py  ioc_candidate.py  model_run.py  stix_object.py
app/extractors/: __init__.py
app/extractors/regex_ioc/: __init__.py  defang.py  extractor.py  normalize.py  patterns.py  version.py
app/ingestion/: __init__.py  chunking.py  dispatcher.py  html_parser.py  language.py  markdown_parser.py  pdf_parser.py  txt_parser.py  types.py  url_fetcher.py
app/jobs/: __init__.py  persistence.py  pipelines.py
app/llm/: __init__.py  attack_mapper.py  client.py
app/schemas/: __init__.py  document.py  evidence.py  intermediate_cti.py  ioc.py  provenance.py
app/stix/: __init__.py  builders.py  exporters.py  ids.py  ioc_to_pattern.py  validators.py  version.py
app/storage/: __init__.py  backend.py  local.py
data/: cti.db
docker/: .dockerignore  Dockerfile.app  Dockerfile.worker  docker-compose.yml
docs/: AI-assisted_CTI_extractor.md  autonomous-mode-quickstart.md  code-standards.md  codebase-summary.md  demo-runbook.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
plans/260518-2338-phase-01-ingestion-ioc-stix/: phase-01-bootstrap-project.md  phase-02-core-infrastructure.md  phase-03-ingestion-layer.md  phase-04-intermediate-cti-schema.md  phase-05-regex-ioc-extractor.md  phase-06-stix-builders-validators.md  phase-07-api-worker-pipeline.md  phase-08-opencti-roundtrip-ci.md  plan.md
plans/260518-2338-phase-01-ingestion-ioc-stix/research/: researcher-01-ingestion-pdf-html-md.md  researcher-02-stix-opencti.md
plans/260519-0724-phase-07-api-pipeline/: phase-01-config-and-db-additions.md  phase-02-storage-abstraction.md  phase-03-error-handling.md  phase-04-app-factory-and-di.md  phase-05-routers.md  phase-06-pipeline-orchestrator.md  phase-07-integration-tests.md  plan.md
plans/260519-0724-phase-07-api-pipeline/reports/: researcher-260519-0732-GH-07-fastapi-patterns.md  researcher-error-handling-middleware.md  researcher-pipeline-orchestrator.md
plans/reports/: PAUSED-260519-0125-phase-01-docker-bringup.md  PAUSED-260519-0245-autonomous-run-summary.md
scripts/: demo.sh  demo_client.py  morning-check.sh
tests/: conftest.py
tests/fixtures/reports/: sample_cti.md
tests/integration/: test_full_pipeline.py
tests/unit/: __init__.py  test_app_package.py
tests/unit/api/: test_correlation_id.py  test_exception_handlers.py  test_problem.py
tests/unit/core/: __init__.py  test_config.py  test_redaction.py
tests/unit/db/: __init__.py  test_audit_chain.py  test_evidence_span.py  test_upsert.py
tests/unit/extractors/: __init__.py  test_defang_offset.py  test_normalize.py  test_regex_ioc_extractor.py
tests/unit/ingestion/: test_chunking.py  test_dispatcher.py  test_language.py  test_markdown_parser.py  test_types_contract.py
tests/unit/llm/: test_attack_mapper.py
tests/unit/schemas/: __init__.py  (+2 more)
(+5 files in other folders)
