[project]
name = "ai-cti-extractor"
version = "0.1.0"
description = "AI-Assisted Cyber Threat Intelligence Extractor for STIX 2.1, ATT&CK, and SOC operations"
authors = [{ name = "conglambaomat", email = "thanhcong24quangnam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["cti", "stix", "mitre-attack", "threat-intelligence", "opencti"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  "fastapi >=0.115,<0.117",
  "uvicorn[standard] >=0.32,<0.34",
  "pydantic >=2.9,<3",
  "pydantic-settings >=2.5,<3",
  "sqlalchemy[asyncio] >=2.0.35,<2.1",
  "asyncpg >=0.30,<0.31",
  "aiosqlite >=0.20,<0.21",
  "alembic >=1.14,<2",
  "redis >=5.1,<6",
  "rq >=2.0,<3",
  "boto3 >=1.35,<2",
  "stix2 >=3.0.1,<4",
  "pycti >=6.4,<7",
  "pdfplumber >=0.11,<0.12",
  "pdfminer.six >=20240706",
  "trafilatura >=1.12,<2",
  "beautifulsoup4 >=4.12,<5",
  "markdown-it-py >=3.0,<4",
  "pytesseract >=0.3.13,<0.4",
  "pillow >=10.4,<12",
  "httpx >=0.27,<0.29",
  "python-multipart >=0.0.12,<0.1",
  "structlog >=24.4,<25",
  "tenacity >=9.0,<10",
  "langdetect >=1.0.9,<2",
]

[dependency-groups]
dev = [
  "pytest >=8.3,<9",
  "pytest-asyncio >=0.24,<0.25",
  "pytest-cov >=5.0,<7",
  "factory-boy >=3.3,<4",
  "hypothesis >=6.115,<7",
  "ruff >=0.7,<0.9",
  "mypy >=1.13,<2",
  "bandit[toml] >=1.7,<2",
  "pip-audit >=2.7,<3",
  "pre-commit >=4.0,<5",
  "types-beautifulsoup4",
  "types-Pillow",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["app", "tests"]
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",       # pycodestyle, pyflakes
  "I",                  # isort
  "B",                  # bugbear
  "UP",                 # pyupgrade
  "S",                  # bandit-flake (security)
  "SIM",                # simplify
  "C4",                 # comprehensions
  "PIE", "RUF",
]
ignore = [
  "S101",               # allow assert in tests
  "S311",               # pseudo-random for non-crypto fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "app"
exclude = ["app/db/migrations/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = [
  "pdfplumber.*",
  "pdfminer.*",
  "trafilatura.*",
  "pytesseract.*",
  "pycti.*",
  "stix2.*",
  "rq.*",
  "factory.*",
  "langdetect.*",
  "markdown_it.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
  "integration: integration tests that require docker stack",
  "integration_opencti: requires OpenCTI dev stack running",
  "slow: tests > 5s",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/db/migrations/*", "app/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "app/db/migrations"]
skips = ["B101"]
